[gd_scene load_steps=20 format=3 uid="uid://cnpra0murgydy"]

[ext_resource type="Script" path="res://Scripts/Rock.gd" id="1_5j50k"]
[ext_resource type="Texture2D" uid="uid://dofvnqogeo65b" path="res://Jupiner/CrystalSpike.png" id="2_3e811"]
[ext_resource type="PackedScene" uid="uid://c5qedv5h4soge" path="res://Scenes/kill_zone.tscn" id="3_3gwp6"]
[ext_resource type="AudioStream" uid="uid://d0qb2h02yrtja" path="res://Assets/Alfie Music and sfx/sfx/environment_stalagtite/environment_stalagtite_fall_01.wav" id="4_xdila"]
[ext_resource type="AudioStream" uid="uid://bnqdvwsw4i787" path="res://Assets/Alfie Music and sfx/sfx/environment_stalagtite/environment_stalagtite_fall_02.wav" id="5_nqbbn"]
[ext_resource type="AudioStream" uid="uid://bcpruk8mfrv41" path="res://Assets/Alfie Music and sfx/sfx/environment_stalagtite/environment_stalagtite_fall_03.wav" id="6_voyfp"]
[ext_resource type="AudioStream" uid="uid://bs6aweg4omuat" path="res://Assets/Alfie Music and sfx/sfx/environment_stalagtite/environment_stalagtite_fall_04.wav" id="7_wlkat"]
[ext_resource type="AudioStream" uid="uid://iwprw6k2y8re" path="res://Assets/Alfie Music and sfx/sfx/environment_stalagtite/environment_stalagtite_fall_05.wav" id="8_owei6"]
[ext_resource type="AudioStream" uid="uid://cl8jmhn57ooi1" path="res://Assets/Alfie Music and sfx/sfx/environment_stalagtite/environment_stalagtite_fall_06.wav" id="9_kmq3b"]
[ext_resource type="AudioStream" uid="uid://dm6p7vcewdxwn" path="res://Assets/Alfie Music and sfx/sfx/player/player_jumpland/crystal/player_jumpland_crystal_01.wav" id="10_0e50i"]
[ext_resource type="AudioStream" uid="uid://cauai35y6ts86" path="res://Assets/Alfie Music and sfx/sfx/player/player_jumpland/crystal/player_jumpland_crystal_02.wav" id="11_rey2b"]
[ext_resource type="AudioStream" uid="uid://cg6jhsyhc3err" path="res://Assets/Alfie Music and sfx/sfx/player/player_jumpland/crystal/player_jumpland_crystal_03.wav" id="12_un323"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_2r82s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ohehq"]
radius = 76.0066

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svwt7"]
size = Vector2(7, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eu28t"]
size = Vector2(7, 3.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5tq2x"]
size = Vector2(3, 3)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5jg53"]
random_pitch = 1.2
random_volume_offset_db = 2.0
streams_count = 6
stream_0/stream = ExtResource("4_xdila")
stream_0/weight = 1.0
stream_1/stream = ExtResource("5_nqbbn")
stream_1/weight = 1.0
stream_2/stream = ExtResource("6_voyfp")
stream_2/weight = 1.0
stream_3/stream = ExtResource("7_wlkat")
stream_3/weight = 1.0
stream_4/stream = ExtResource("8_owei6")
stream_4/weight = 1.0
stream_5/stream = ExtResource("9_kmq3b")
stream_5/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ulxbm"]
streams_count = 3
stream_0/stream = ExtResource("10_0e50i")
stream_0/weight = 1.0
stream_1/stream = ExtResource("11_rey2b")
stream_1/weight = 1.0
stream_2/stream = ExtResource("12_un323")
stream_2/weight = 1.0

[node name="Rock" type="RigidBody2D"]
z_index = -1
collision_mask = 7
physics_material_override = SubResource("PhysicsMaterial_2r82s")
lock_rotation = true
script = ExtResource("1_5j50k")

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(0, 131)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_ohehq")
debug_color = Color(0.461973, 0.470521, 0.93348, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3e811")

[node name="RockCollider" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_svwt7")

[node name="JumpArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpArea"]
position = Vector2(-0.5, -5.25)
shape = SubResource("RectangleShape2D_eu28t")

[node name="KillZone" parent="." instance=ExtResource("3_3gwp6")]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(-0.5, 6.5)
shape = SubResource("RectangleShape2D_5tq2x")
debug_color = Color(0.588354, 0.0221177, 0, 0.42)

[node name="GroundTimer" type="Timer" parent="."]
one_shot = true

[node name="audio_impact" type="AudioStreamPlayer2D" parent="."]

[node name="audio_fall" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_5jg53")
volume_db = -3.0
bus = &"SFX"

[node name="audio_jump" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_ulxbm")
volume_db = -6.0
pitch_scale = 1.25
bus = &"SFX"

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="JumpArea" to="." method="_on_jump_area_body_entered"]
[connection signal="timeout" from="GroundTimer" to="." method="_on_ground_timer_timeout"]
